--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="carousel-item active">
                 <img src="img/library-488690_1280.jpg">
                 <div class="carousel-caption">
-                    <h1 class="display-2">Vocab Masters</h1>
+                    <h1 class="display-2">Vocab Master</h1>
                     <h3>English for NDA/CDS</h3>
                     <a href="#learnmore"><button type="button" class="btn btn-outline-light btn-lg">Learn more</button></a>
                     <a href="getstarted.html"><button type="button" class="btn btn-primary btn-lg">Get started</button></a>
@@ -123,7 +123,7 @@
             </div>
             <hr>
             <div class="col-12">
-                <p class="lead">Welcome to vocab masters. 
+                <p class="lead">Welcome to vocab master. 
                      At vocab masters anyone can give our MCQ test everyday and learn new words everyday.
                 </p>
             </div> 
